# tick-saver

./: database.py  main.py  ohlc_handler.py  pyproject.toml  requirements.txt  ts_login_worker.py
helpers/: zerodha_helpers.py
utils/: publisher.py  utils.py
